--- a/running_record2.ipynb
+++ b/running_record2.ipynb
@@ -111,7 +111,7 @@
     "            hh, rs0= Hhat[0], Rs[0]\n",
     "            Rx = hh @ rs0 @ hh.conj().t() + Rb[0]\n",
     "            shat = (rs0 @ hh.conj().t() @ Rx.inverse()@x.permute(0,2,3,1)[0,:,:,:, None]).cpu() \n",
-    "            print(Rb[0], Rb.sum()/3/128)\n",
+    "            print(epoch, Rb[0], Rb.sum()/3/128)\n",
     "            for ii in range(K):\n",
     "                plt.figure()\n",
     "                plt.imshow(shat[:,:,ii,0].abs())\n",
@@ -1051,127 +1051,7 @@
     "    RAdam = optim.RAdam\n",
     "\n",
     "torch.autograd.set_detect_anomaly(True)\n",
-    "from vae_model import *\n",
-    "class NN(nn.Module):\n",
-    "    \"\"\"This is recursive Wiener filter version, with Rb threshold of [1e-3, 1e2]\n",
-    "    Input shape [I,M,N,F], e.g.[32,3,100,100]\n",
-    "    J <=K\n",
-    "    \"\"\"\n",
-    "    def __init__(self, M=3, K=3, im_size=100):\n",
-    "        super().__init__()\n",
-    "        self.dz = 32\n",
-    "        self.K, self.M = K, M\n",
-    "\n",
-    "        # Estimate H and coarse V\n",
-    "        self.v_net = nn.Sequential(\n",
-    "            DoubleConv(in_channels=M*2, out_channels=32),\n",
-    "            DoubleConv(in_channels=32, out_channels=16),\n",
-    "            DoubleConv(in_channels=16, out_channels=4),\n",
-    "            ) \n",
-    "        self.v_out = OutConv(in_channels=4, out_channels=1)\n",
-    "        self.hb_net = nn.Sequential(\n",
-    "            Down(in_channels=1, out_channels=32),\n",
-    "            Down(in_channels=32, out_channels=16),\n",
-    "            Down(in_channels=16, out_channels=8),\n",
-    "            Reshape(-1, 8*12*12),\n",
-    "            )\n",
-    "        # Estimate H\n",
-    "        self.h_net = nn.Sequential(\n",
-    "            LinearBlock(8*12*12, 64),\n",
-    "            nn.Linear(64, 32),\n",
-    "            nn.Linear(32, 1),\n",
-    "            nn.Tanh()\n",
-    "            )   \n",
-    "        # Estimate Rb\n",
-    "        self.b_net = nn.Sequential(\n",
-    "            LinearBlock(8*12*12, 64),\n",
-    "            nn.Linear(64, 32),\n",
-    "            nn.Linear(32, 1),\n",
-    "            )   \n",
-    "        # Estimate V using auto encoder\n",
-    "        self.encoder = nn.Sequential(\n",
-    "            Down(in_channels=1, out_channels=64),\n",
-    "            DoubleConv(in_channels=64, out_channels=32),\n",
-    "            Down(in_channels=32, out_channels=16),\n",
-    "            DoubleConv(in_channels=16, out_channels=1),\n",
-    "            )\n",
-    "        self.fc1 = nn.Linear(25*25, 2*self.dz)\n",
-    "        self.decoder = nn.Sequential(\n",
-    "            DoubleConv(in_channels=self.dz+2, out_channels=64),\n",
-    "            DoubleConv(in_channels=64, out_channels=32),\n",
-    "            DoubleConv(in_channels=32, out_channels=16),\n",
-    "            DoubleConv(in_channels=16, out_channels=4),\n",
-    "            OutConv(in_channels=4, out_channels=1),\n",
-    "            ) \n",
-    "        self.im_size = im_size\n",
-    "        x = torch.linspace(-1, 1, im_size)\n",
-    "        y = torch.linspace(-1, 1, im_size)\n",
-    "        x_grid, y_grid = torch.meshgrid(x, y)\n",
-    "        # Add as constant, with extra dims for N and C\n",
-    "        self.register_buffer('x_grid', x_grid.view((1, 1) + x_grid.shape))\n",
-    "        self.register_buffer('y_grid', y_grid.view((1, 1) + y_grid.shape))\n",
-    "\n",
-    "    def reparameterize(self, mu, logvar):\n",
-    "        std = torch.exp(0.5*logvar)\n",
-    "        eps = torch.randn_like(std)\n",
-    "        return mu + eps*std\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        batch_size, _, N, F = x.shape\n",
-    "        z_all, v_all, h_all = [], [], []\n",
-    "\n",
-    "        \"Neural nets for H,V\"\n",
-    "        for i in range(self.K):\n",
-    "            if i == 0:\n",
-    "                inp = x\n",
-    "            else:\n",
-    "                temp = hj[...,None]@W@inp.permute(2,3,0,1)[...,None]\n",
-    "                inp = inp - temp.squeeze().permute(2,3,0,1)\n",
-    "            temp = self.v_net(torch.cat((inp.real, inp.imag), dim=1)).exp() \n",
-    "            vj = self.v_out(temp).exp() #sigma_s**2 >=0\n",
-    "            vj = threshold(vj, floor=1e-3, ceiling=1e3)  # shape of [I, 1, N, F]\n",
-    "            hb = self.hb_net(vj)\n",
-    "            ang = self.h_net(hb)  # shape of [I,1]\n",
-    "            sig_b_squared = self.b_net(hb).exp() # shape of [I,1]\n",
-    "            \"Get H\"\n",
-    "            ch = torch.pi*torch.arange(self.M, device=ang.device)\n",
-    "            hj = ((ang @ ch[None,:])*1j).exp() # shape:[I, M]\n",
-    "            h_all.append(hj)\n",
-    "\n",
-    "            \"Get Rb, the energy of the rest\"\n",
-    "            Rb = threshold(sig_b_squared[:,:,None]**2, 1e-3, 1e2)*torch.ones(batch_size, \\\n",
-    "                self.M, device=ch.device).diag_embed().to(torch.cfloat) # shape:[I, M, M]\n",
-    "\n",
-    "            \"Wienter filter to get coarse shat\"\n",
-    "            Rs = vj.permute(2,3,0,1)[..., None].to(torch.cfloat)  #shape of [N,F,I,1,1]\n",
-    "            Rx = hj[...,None] @ Rs @ hj[:,None].conj() + Rb # shape of [N,F,I,M,M]\n",
-    "            W = Rs @ hj[:, None,].conj() @ Rx.inverse()  # shape of [N,F,I,1,M]\n",
-    "            shat = (W @ x.permute(2,3,0,1)[...,None]).squeeze().permute(2,0,1) #[I, N, F]\n",
-    "        \n",
-    "            \"Encoder\"\n",
-    "            xx = self.encoder(shat[:,None].abs())\n",
-    "            \"Get latent variable\"\n",
-    "            zz = self.fc1(xx.reshape(batch_size,-1))\n",
-    "            mu = zz[:,::2]\n",
-    "            logvar = zz[:,1::2]\n",
-    "            z = self.reparameterize(mu, logvar)\n",
-    "            z_all.append(z)\n",
-    "            \n",
-    "            \"Decoder to get V\"\n",
-    "            # View z as 4D tensor to be tiled across new N and F dimensions            \n",
-    "            zr = z.view((batch_size, self.dz)+ (1, 1))  #Shape: IxDxNxF\n",
-    "            # Tile across to match image size\n",
-    "            zr = zr.expand(-1, -1, self.im_size, self.im_size)  #Shape: IxDx64x64\n",
-    "            # Expand grids to batches and concatenate on the channel dimension\n",
-    "            zbd = torch.cat((self.x_grid.expand(batch_size, -1, -1, -1),\n",
-    "                        self.y_grid.expand(batch_size, -1, -1, -1), zr), dim=1) # Shape: Ix(dz*K+2)xNxF\n",
-    "            v = self.decoder(zbd).exp()\n",
-    "            v_all.append(threshold(v, floor=1e-3, ceiling=1e2)) # 1e-3 to 1e2\n",
-    "        Hhat = torch.stack(h_all, 2) # shape:[I, M, K]\n",
-    "        vhat = torch.stack(v_all, 4).squeeze().to(torch.cfloat) # shape:[I, N, F, K]\n",
-    "\n",
-    "        return vhat.diag_embed(), Hhat, Rb, mu, logvar\n",
-    "\n",
+    "from vae_model import NN7 as NN\n",
     "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, beta=0.5):\n",
     "    x = x.permute(0,2,3,1)\n",
     "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
@@ -1261,7 +1141,7 @@
     "            hh, rs0= Hhat[0], Rs[0]\n",
     "            Rx = hh @ rs0 @ hh.conj().t() + Rb[0]\n",
     "            shat = (rs0 @ hh.conj().t() @ Rx.inverse()@x.permute(0,2,3,1)[0,:,:,:, None]).cpu() \n",
-    "            print(Rb[0], Rb.sum()/3/128)\n",
+    "            print(epoch, Rb[0], Rb.sum()/3/128)\n",
     "            for ii in range(K):\n",
     "                plt.figure()\n",
     "                plt.imshow(shat[:,:,ii,0].abs())\n",
