--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -1258,10 +1258,8 @@
     "\n",
     "    angs = (torch.rand(n_data,1)*50 +10)/180*np.pi  # signal aoa [10, 60]\n",
     "    h_1 = (1j*angs.sin()@torch.arange(M).to(torch.cfloat)[None,:]).exp() #shape of [n,M]\n",
-    "\n",
     "    angs_n1 = (torch.rand(n_data,1)*50 -70)/180*np.pi  # noise aoa [-70, -20]\n",
     "    h_2 = (1j*angs_n1.sin()@torch.arange(M).to(torch.cfloat)[None,:]).exp() #shape of [n,M]\n",
-    "\n",
     "    angs_n2 = (torch.rand(n_data,1)*50 +120)/180*np.pi  # noise aoa [120, 170]\n",
     "    h_3 = (1j*angs_n2.sin()@torch.arange(M).to(torch.cfloat)[None,:]).exp() #shape of [n,M]\n",
     "\n",
@@ -1278,6 +1276,7 @@
     "        sig2[i] = sig2[i].roll((a[0], a[1]),dims=(1,2))\n",
     "        a = torch.randint(0,50,(2,))\n",
     "        sig3[i] = sig3[i].roll((a[0], a[1]),dims=(1,2))\n",
+    "    s = torch.stack((sig1[:,0], sig2[:,0], sig3[:,0]), dim=3)\n",
     "    mix = sig1 + sig2 + sig3\n",
     "    mix_all = mix.permute(0,2,3,1)\n",
     "    mixn = awgn_batch(mix_all,seed=0).permute(0,3,1,2) # shape of [I, M, N, F]\n",
@@ -1452,6 +1451,7 @@
     "tr = Data.DataLoader(data, batch_size=opts['batch_size'], shuffle=True, drop_last=True)\n",
     "xval = mixn[I:I+128]\n",
     "hgt = H_all[I:I+128]\n",
+    "sval = s[I:I+128]\n",
     "xval = xval/xval.abs().amax(dim=(1,2,3), keepdim=True)\n",
     "xval_cuda = xval[:128].to(torch.cfloat).cuda()\n",
     "\n",
@@ -1518,21 +1518,23 @@
     "            plt.savefig(fig_loc + f'Epoch{epoch}_val') \n",
     "            plt.close('all')           \n",
     "\n",
-    "            av_hcorr = []\n",
+    "            av_hcorr, av_scorr = [], []\n",
+    "            Rxperm = Hhat_val@Rs.permute(1,2,0,3,4)@Hhat_val.transpose(-1,-2).conj() + Rb\n",
+    "            shatperm = Rs.permute(1,2,0,3,4)@Hhat_val.conj().transpose(-1,-2)\\\n",
+    "                    @Rxperm.inverse()@xval_cuda.permute(2,3,0,1)[...,None]\n",
+    "            shat = shatperm.permute(2,0,1,3,4).squeeze().cpu().abs()\n",
     "            for ind in range(128):\n",
     "                hh = Hhat_val[ind]\n",
     "                av_hcorr.append(h_corr(hh.cpu(), hgt[ind]))\n",
+    "                av_scorr.append(s_corr(sval[ind].abs(), shat[ind]))\n",
     "            print('first 3 h_corr',av_hcorr[:3],' averaged128:', sum(av_hcorr)/128)\n",
+    "            print('first 3 s_corr',av_scorr[:3],' averaged128:', sum(av_scorr)/128)\n",
     "\n",
     "            plt.figure()\n",
     "            for ind in range(3):\n",
-    "                hh = Hhat_val[ind]\n",
-    "                rs0 = Rs[ind]\n",
-    "                Rx = hh @ rs0 @ hh.conj().t() + Rb[ind]\n",
-    "                shat = (rs0 @ hh.conj().t() @ Rx.inverse()@xval_cuda.permute(0,2,3,1)[ind,:,:,:, None]).cpu() \n",
     "                for ii in range(J):\n",
     "                    plt.subplot(3,3,ii+1+ind*3)\n",
-    "                    plt.imshow(shat[:,:,ii,0].abs())\n",
+    "                    plt.imshow(shat[ind,:,:,ii])\n",
     "                    # plt.tight_layout(pad=1.1)\n",
     "                    # if ii == 0 : plt.title(f'Epoch{epoch}_sample{ind}')\n",
     "            plt.savefig(fig_loc + f'Epoch{epoch}_estimated sources')\n",
