fixed cuda random seed to make result reproducible

--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -527,7 +527,13 @@
     "torch.set_printoptions(linewidth=160)\n",
     "from datetime import datetime\n",
     "print('starting date time ', datetime.now())\n",
-    "torch.manual_seed(1)\n",
+    "\"make the result reproducible\"\n",
+    "seed = 1\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)       # current GPU seed\n",
+    "torch.cuda.manual_seed_all(seed)   # all GPUs seed\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False\n",
     "\n",
     "rid = 'v75'\n",
     "fig_loc = '../data/data_ss/figures/'\n",
@@ -538,13 +544,6 @@
     "    os.mkdir(mod_loc + f'{rid}/')\n",
     "fig_loc = fig_loc + f'{rid}/'\n",
     "mod_loc = mod_loc + f'{rid}/'\n",
-    "\n",
-    "if torch.__version__[:5] != '1.8.1':\n",
-    "    def mydet(x):\n",
-    "        return x.det()\n",
-    "    RAdam = torch.optim.RAdam\n",
-    "else:\n",
-    "    RAdam = optim.RAdam\n",
     "torch.autograd.set_detect_anomaly(False)\n",
     "#%% generate data\n",
     "if True:\n",
@@ -854,7 +853,13 @@
     "torch.set_printoptions(linewidth=160)\n",
     "from datetime import datetime\n",
     "print('starting date time ', datetime.now())\n",
-    "torch.manual_seed(1)\n",
+    "\"make the result reproducible\"\n",
+    "seed = 1\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)       # current GPU seed\n",
+    "torch.cuda.manual_seed_all(seed)   # all GPUs seed\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False\n",
     "\n",
     "rid = 'v79'\n",
     "fig_loc = '../data/data_ss/figures/'\n",
@@ -1222,7 +1227,14 @@
     "torch.set_printoptions(linewidth=160)\n",
     "from datetime import datetime\n",
     "print('starting date time ', datetime.now())\n",
-    "torch.manual_seed(1)\n",
+    "\n",
+    "\"make the result reproducible\"\n",
+    "seed = 1\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)       # current GPU seed\n",
+    "torch.cuda.manual_seed_all(seed)   # all GPUs seed\n",
+    "torch.backends.cudnn.deterministic = True\n",
+    "torch.backends.cudnn.benchmark = False\n",
     "\n",
     "rid = 'v80'\n",
     "fig_loc = '../data/data_ss/figures/'\n",
@@ -1566,18 +1578,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c728c5ad72b5fd3c6e083c4badca00ca04470578383c0e9d983163c40aa43e1f"
+    "hash": "fac40f379508c4cfae9fc091e223d50ced0be70195fe47ee2ea4ee37d189cc8d"
    }
   }
  },
