changed v80 to v80s, as standard

--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -527,6 +527,7 @@
     "torch.set_printoptions(linewidth=160)\n",
     "from datetime import datetime\n",
     "print('starting date time ', datetime.now())\n",
+    "\n",
     "\"make the result reproducible\"\n",
     "seed = 1\n",
     "torch.manual_seed(seed)\n",
@@ -1220,9 +1221,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% v80\n",
+    "#%% v80s\n",
     "from utils import *\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
     "plt.rcParams['figure.dpi'] = 100\n",
     "torch.set_printoptions(linewidth=160)\n",
     "from datetime import datetime\n",
@@ -1236,7 +1237,7 @@
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False\n",
     "\n",
-    "rid = 'v80'\n",
+    "rid = 'v80s' # standard\n",
     "fig_loc = '../data/data_ss/figures/'\n",
     "mod_loc = '../data/data_ss/models/'\n",
     "if not(os.path.isdir(fig_loc + f'/{rid}/')): \n",
