--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -747,7 +747,6 @@
     "\n",
     "    return -ll.mean().real, beta*kl  #+ 10*loss_slotCEL\n",
     "\n",
-    "#%%\n",
     "I = 6000 # how many samples\n",
     "M, N, F, J = 3, NandF, NandF, 3\n",
     "NF = N*F\n",
@@ -762,6 +761,7 @@
     "tr = Data.DataLoader(data, batch_size=opts['batch_size'], shuffle=True, drop_last=True)\n",
     "xval = mixn[I:I+128]\n",
     "hgt = H_all[I:I+128]\n",
+    "sval = s[I:I+128]\n",
     "xval = xval/xval.abs().amax(dim=(1,2,3), keepdim=True)\n",
     "xval_cuda = xval[:128].to(torch.cfloat).cuda()\n",
     "\n",
@@ -828,21 +828,23 @@
     "            plt.savefig(fig_loc + f'Epoch{epoch}_val') \n",
     "            plt.close('all')           \n",
     "\n",
-    "            av_hcorr = []\n",
+    "            av_hcorr, av_scorr = [], []\n",
+    "            Rxperm = Hhat_val@Rs.permute(1,2,0,3,4)@Hhat_val.transpose(-1,-2).conj() + Rb\n",
+    "            shatperm = Rs.permute(1,2,0,3,4)@Hhat_val.conj().transpose(-1,-2)\\\n",
+    "                    @Rxperm.inverse()@xval_cuda.permute(2,3,0,1)[...,None]\n",
+    "            shat = shatperm.permute(2,0,1,3,4).squeeze().cpu().abs()\n",
     "            for ind in range(128):\n",
     "                hh = Hhat_val[ind]\n",
     "                av_hcorr.append(h_corr(hh.cpu(), hgt[ind]))\n",
+    "                av_scorr.append(s_corr(sval[ind].abs(), shat[ind]))\n",
     "            print('first 3 h_corr',av_hcorr[:3],' averaged128:', sum(av_hcorr)/128)\n",
+    "            print('first 3 s_corr',av_scorr[:3],' averaged128:', sum(av_scorr)/128)\n",
     "\n",
     "            plt.figure()\n",
     "            for ind in range(3):\n",
-    "                hh = Hhat_val[ind]\n",
-    "                rs0 = Rs[ind]\n",
-    "                Rx = hh @ rs0 @ hh.conj().t() + Rb[ind]\n",
-    "                shat = (rs0 @ hh.conj().t() @ Rx.inverse()@xval_cuda.permute(0,2,3,1)[ind,:,:,:, None]).cpu() \n",
     "                for ii in range(J):\n",
     "                    plt.subplot(3,3,ii+1+ind*3)\n",
-    "                    plt.imshow(shat[:,:,ii,0].abs())\n",
+    "                    plt.imshow(shat[ind,:,:,ii])\n",
     "                    # plt.tight_layout(pad=1.1)\n",
     "                    # if ii == 0 : plt.title(f'Epoch{epoch}_sample{ind}')\n",
     "            plt.savefig(fig_loc + f'Epoch{epoch}_estimated sources')\n",
