added the modules with groupnorm layer

--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -726,7 +726,7 @@
     "\n",
     "        return vhat.diag_embed(), Hhat, Rb, mu, logvar, zall\n",
     "\n",
-    "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall, beta=1e-3):\n",
+    "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall, beta=1):\n",
     "    I, M, J = x.shape[0], x.shape[1], Rs.shape[-1]\n",
     "    x = x.permute(0,2,3,1)\n",
     "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
@@ -745,7 +745,7 @@
     "    # rx = temp.mean(dim=(1,2))\n",
     "    # term = (((rx- HHt/100).abs())**2).mean()\n",
     "\n",
-    "    return -ll.mean().real, beta*kl  #+ 10*loss_slotCEL\n",
+    "    return -ll.sum(), beta*kl  #+ 10*loss_slotCEL\n",
     "\n",
     "I = 6000 # how many samples\n",
     "M, N, F, J = 3, NandF, NandF, 3\n",
@@ -1089,7 +1089,7 @@
     "\n",
     "        return vhat.diag_embed(), Hhat, Rb, mu, logvar, zall\n",
     "\n",
-    "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall, beta=1e-3):\n",
+    "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall, beta=1):\n",
     "    I, M, J = x.shape[0], x.shape[1], Rs.shape[-1]\n",
     "    x = x.permute(0,2,3,1)\n",
     "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
@@ -1108,7 +1108,7 @@
     "    # rx = temp.mean(dim=(1,2))\n",
     "    # term = (((rx- HHt/100).abs())**2).mean()\n",
     "\n",
-    "    return -ll.mean().real, beta*kl  #+ 10*loss_slotCEL\n",
+    "    return -ll.sum(), beta*kl  #+ 10*loss_slotCEL\n",
     "\n",
     "#%%\n",
     "I = 6000 # how many samples\n",
