--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -3913,6 +3913,277 @@
     "    #     plt.imshow(shat.squeeze().abs())\n",
     "    #     plt.colorbar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%% v86  # 1 channel, 3 classes, see if the VAE capacity is enough\n",
+    "from utils import *\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
+    "plt.rcParams['figure.dpi'] = 100\n",
+    "torch.set_printoptions(linewidth=160)\n",
+    "from datetime import datetime\n",
+    "print('starting date time ', datetime.now())\n",
+    "\n",
+    "#%%\n",
+    "\"make the result reproducible\"\n",
+    "seed = 1\n",
+    "torch.manual_seed(seed)\n",
+    "torch.cuda.manual_seed(seed)       # current GPU seed\n",
+    "torch.cuda.manual_seed_all(seed)   # all GPUs seed\n",
+    "torch.backends.cudnn.deterministic = True  #True uses deterministic alg. for cuda\n",
+    "torch.backends.cudnn.benchmark = False  #False cuda use the fixed alg. for conv, may slower\n",
+    "\n",
+    "rid = 'v86' \n",
+    "fig_loc = '../data/data_ss/figures/'\n",
+    "mod_loc = '../data/data_ss/models/'\n",
+    "if not(os.path.isdir(fig_loc + f'/{rid}/')): \n",
+    "    print('made a new folder')\n",
+    "    os.mkdir(fig_loc + f'{rid}/')\n",
+    "    os.mkdir(mod_loc + f'{rid}/')\n",
+    "fig_loc = fig_loc + f'{rid}/'\n",
+    "mod_loc = mod_loc + f'{rid}/'\n",
+    "# torch.autograd.set_detect_anomaly(True)\n",
+    "\n",
+    "#%% define models and functions\n",
+    "from vae_modules import *\n",
+    "def lower2matrix(rx12):\n",
+    "    ind = torch.tril_indices(3,3)\n",
+    "    indx = np.diag_indices(3)\n",
+    "    rx_inv_hat = torch.zeros(rx12.shape[0], 3, 3, dtype=torch.cfloat).cuda()\n",
+    "    rx_inv_hat[:, ind[0], ind[1]] = rx12[:, :6] + 1j*rx12[:,6:]\n",
+    "    rx_inv_hat = rx_inv_hat + rx_inv_hat.permute(0,2,1).conj()\n",
+    "    rx_inv_hat[:, indx[0], indx[1]] = rx_inv_hat[:, indx[0], indx[1]]/2\n",
+    "    return rx_inv_hat\n",
+    "\n",
+    "class NNet(nn.Module):\n",
+    "    \"\"\"This is recursive Wiener filter version, with Rb threshold of [1e-3, 1e2]\n",
+    "    Input shape [I,M,N,F], e.g.[32,3,100,100]\n",
+    "    J <=K\n",
+    "    \"\"\"\n",
+    "    def __init__(self, M, K, im_size):\n",
+    "        super().__init__()\n",
+    "        self.dz = 32\n",
+    "        self.J, self.M = K, M\n",
+    "        down_size = int(im_size/4)\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            Down_g(in_channels=1, out_channels=64),\n",
+    "            DoubleConv_g(in_channels=64, out_channels=32),\n",
+    "            Down_g(in_channels=32, out_channels=16),\n",
+    "            DoubleConv_g(in_channels=16, out_channels=1),\n",
+    "            )\n",
+    "        self.fc1 = nn.Linear(down_size*down_size, 2*self.dz)\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(self.dz, down_size*down_size),\n",
+    "            Reshape(-1, 1, down_size, down_size),\n",
+    "            Up_g(in_channels=1, out_channels=64),\n",
+    "            DoubleConv_g(in_channels=64, out_channels=32),\n",
+    "            Up_g(in_channels=32, out_channels=16),\n",
+    "            DoubleConv_g(in_channels=16, out_channels=8),\n",
+    "            OutConv(in_channels=8, out_channels=1),\n",
+    "            ) \n",
+    "        self.bilinear = nn.Linear(self.dz, self.dz, bias=False)\n",
+    "\n",
+    "    def reparameterize(self, mu, logvar):\n",
+    "        std = torch.exp(0.5*logvar)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        return mu + eps*std\n",
+    "\n",
+    "    def forward(self, x):     \n",
+    "        btsize, M, N, F = x.shape\n",
+    "        z_all, v_all, h_all = [], [], []\n",
+    "        ch = np.pi*torch.arange(self.M, device=x.device)\n",
+    "        xj = x.permute(0,2,3,1)[...,None]  # shape of [I,N,F,M,1]\n",
+    "\n",
+    "        \n",
+    "        \"Encoder part\"\n",
+    "        shat = xj\n",
+    "        xx = self.encoder(shat.squeeze()[:,None].abs())\n",
+    "\n",
+    "        \"Get latent variable\"\n",
+    "        zz = self.fc1(xx.reshape(btsize,-1))\n",
+    "        mu = zz[:,::2]\n",
+    "        logvar = zz[:,1::2]\n",
+    "        z = self.reparameterize(mu, logvar)\n",
+    "        wz = self.bilinear(z)\n",
+    "        z_all.append(z)\n",
+    "        z_all.append(wz)\n",
+    "        \n",
+    "        \"Decoder to get V\"\n",
+    "        v = self.decoder(z).square().squeeze()  # shape of [I,N,F]\n",
+    "        v_all.append(threshold(v, floor=1e-6, ceiling=1e2)) # 1e-6 to 1e2 \n",
+    "       \n",
+    "        vhat = torch.stack(v_all, 3).to(torch.cfloat) # shape:[I, N, F, J]\n",
+    "        zall = torch.stack(z_all, dim=1)\n",
+    "\n",
+    "        # Rb = (b@b.conj().permute(0,1,2,4,3)).mean(dim=(1,2)).squeeze()\n",
+    "        eye = torch.eye(M, device='cuda') \n",
+    "        Rb = torch.stack(tuple(eye for ii in range(btsize)), 0)*1e-3\n",
+    "\n",
+    "        return vhat.squeeze(), Rb, mu, logvar, zall\n",
+    "\n",
+    "def loss_fun(x, Rs, Rb, mu, logvar, zall, beta=1):\n",
+    "    I, M, J = x.shape[0], x.shape[1], Rs.shape[-1]\n",
+    "    x = x.squeeze()\n",
+    "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    Rx = Rs.squeeze() + Rb # shape of [I, N, F]\n",
+    "    ll = -(np.pi*Rx.abs()).log() - (x.conj()*(1/Rx)*x)\n",
+    "    return -ll.sum(), beta*kl \n",
+    "\n",
+    "#%%\n",
+    "\"raw data processing\"\n",
+    "FT = 64  #48, 64, 80, 100, 128, 200, 256\n",
+    "var_name = ['ble', 'bt', 'fhss1', 'fhss2', 'wifi1', 'wifi2']\n",
+    "data = {}\n",
+    "\n",
+    "def get_ftdata(data_pool):\n",
+    "    *_, Z = stft(data_pool, fs=4e7, nperseg=FT, boundary=None)\n",
+    "    x = torch.tensor(np.roll(Z, FT//2, axis=1))  # roll nperseg//2\n",
+    "    return x.to(torch.cfloat)\n",
+    "\n",
+    "for i in range(6):\n",
+    "    temp = sio.loadmat('/home/chenhao1/Matlab/LMdata/compressed/'+var_name[i]+f'_{FT}_2k.mat')\n",
+    "    x = torch.tensor(temp['x'])\n",
+    "    x =  x/((x.abs()**2).sum(dim=(1),keepdim=True)**0.5)# normalize\n",
+    "    data[i] = x\n",
+    "s1 = get_ftdata(data[0]) # ble [2000,F,T]\n",
+    "s2 = get_ftdata(data[2]) # fhss1\n",
+    "s3 = get_ftdata(data[5]) # wifi2\n",
+    "s = [s1, s2, s3]\n",
+    "\n",
+    "torch.manual_seed(1)\n",
+    "J, M = 3, 1\n",
+    "\"training data\"\n",
+    "x = []\n",
+    "for i in range(4):\n",
+    "    temp = 0\n",
+    "    for j in range(J):\n",
+    "        idx = torch.randperm(2000)\n",
+    "        temp =s[j][idx]\n",
+    "        x.append(temp)\n",
+    "x = torch.stack(x, dim=1)\n",
+    "xtr = x[:,:9].reshape(-1,1,FT,FT)\n",
+    "d = awgn_batch(xtr, snr=40, seed=1) # added white noise\n",
+    "\n",
+    "xvt = x[:,9:].reshape(-1,1,FT,FT)\n",
+    "sval = xvt[:1000]\n",
+    "xval = awgn_batch(sval, snr=40, seed=10)\n",
+    "\n",
+    "#%%\n",
+    "I = 18000 # how many samples\n",
+    "M, N, F, J = 1, 64, 64, 1\n",
+    "NF = N*F\n",
+    "eps = 5e-4\n",
+    "opts = {}\n",
+    "opts['batch_size'] = 128\n",
+    "opts['n_epochs'] = 301\n",
+    "opts['lr'] = 1e-3\n",
+    "\n",
+    "xtr = (d/d.abs().amax(dim=(1,2,3), keepdim=True)) # [sample,M,N,F]\n",
+    "xtr = xtr.to(torch.cfloat)\n",
+    "data = Data.TensorDataset(xtr[:I])\n",
+    "tr = Data.DataLoader(data, batch_size=opts['batch_size'], shuffle=True, drop_last=True)\n",
+    "\n",
+    "sval= sval.permute(0,2,3,1)\n",
+    "xval = xval/xval.abs().amax(dim=(1,2,3), keepdim=True)\n",
+    "data = Data.TensorDataset(xval, sval)\n",
+    "dval = Data.DataLoader(data, batch_size=1000, drop_last=True)\n",
+    "\n",
+    "#%%\n",
+    "loss_iter, loss_tr, loss1, loss2, loss_eval = [], [], [], [], []\n",
+    "model = NNet(M,J,N).cuda()\n",
+    "# for w in model.parameters():\n",
+    "#     nn.init.normal_(w, mean=0., std=0.01)\n",
+    "\n",
+    "optimizer = torch.optim.RAdam(model.parameters(),\n",
+    "                lr= opts['lr'],\n",
+    "                betas=(0.9, 0.999), \n",
+    "                eps=1e-8,\n",
+    "                weight_decay=0)\n",
+    "\n",
+    "for epoch in range(opts['n_epochs']):\n",
+    "    model.train()\n",
+    "    for i, (x,) in enumerate(tr): \n",
+    "        x = x.cuda()\n",
+    "        optimizer.zero_grad()         \n",
+    "        Rs, Rb, mu, logvar, zall= model(x)\n",
+    "        l1, l2 = loss_fun(x, Rs, Rb, mu, logvar, zall)\n",
+    "        loss = l1 + l2\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=100)\n",
+    "        optimizer.step()\n",
+    "        torch.cuda.empty_cache()\n",
+    "\n",
+    "        if i%30 == 0:\n",
+    "            loss_tr.append(loss.detach().cpu().item()/opts['batch_size'])\n",
+    "            loss1.append(l1.detach().cpu().item()/opts['batch_size'])\n",
+    "            loss2.append(l2.detach().cpu().item()/opts['batch_size'])\n",
+    "\n",
+    "    if epoch%5 == 0:\n",
+    "        print(epoch)\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss_tr, '-or')\n",
+    "        plt.title(f'Loss fuction at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_LossFunAll')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss1, '-og')\n",
+    "        plt.title(f'Reconstruction loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_Loss1')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss2, '-og')\n",
+    "        plt.title(f'KL loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_Loss2')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss_tr[-50:], '-or')\n",
+    "        plt.title(f'Last 50 of loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_last50')\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            av_hcorr, av_scorr, temp = [], [], []\n",
+    "            for i, (x, s) in enumerate(dval):\n",
+    "                xval_cuda = x.cuda()\n",
+    "                Rs, Rb, mu, logvar, zall= model(xval_cuda)\n",
+    "                l1, l2 = loss_fun(xval_cuda, Rs, Rb, mu, logvar, zall)\n",
+    "                temp.append((l1+l2).cpu().item()/x.shape[0])\n",
+    "                     \n",
+    "                Rx = Rs + Rb\n",
+    "                shatperm = Rs/Rx*xval_cuda.squeeze()\n",
+    "                shat = shatperm[...,None].cpu().abs()\n",
+    "                for ind in range(x.shape[0]):\n",
+    "                    av_scorr.append(s_corr(s[ind].abs(), shat[ind]))\n",
+    "                \n",
+    "                if i == 0:\n",
+    "                    plt.figure()\n",
+    "                    for ind in range(3):\n",
+    "                        for ii in range(J):\n",
+    "                            plt.subplot(3,3,ii+1+ind*3)\n",
+    "                            plt.imshow(shat[ind,:,:,ii])\n",
+    "                            # plt.tight_layout(pad=1.1)\n",
+    "                            # if ii == 0 : plt.title(f'Epoch{epoch}_sample{ind}')\n",
+    "                    plt.savefig(fig_loc + f'Epoch{epoch}_estimated sources')\n",
+    "                    plt.show()\n",
+    "                    plt.close('all')\n",
+    "\n",
+    "            loss_eval.append(sum(temp)/len(temp))\n",
+    "            print('first 3 s_corr',av_scorr[:3],' averaged:', sum(av_scorr)/len(av_scorr))\n",
+    "\n",
+    "            plt.figure()\n",
+    "            plt.plot(loss_eval[-50:], '-xb')\n",
+    "            plt.title(f'last 50 validation loss at epoch{epoch}')\n",
+    "            plt.savefig(fig_loc + f'Epoch{epoch}_val') \n",
+    "            plt.close('all') \n",
+    "\n",
+    "        torch.save(model, mod_loc+f'model_epoch{epoch}.pt')\n",
+    "print('done')\n",
+    "print('End date time ', datetime.now())"
+   ]
   }
  ],
  "metadata": {
